--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.IntentExtrasActivity"></activity>
+        <activity android:name=".others.ToolbarActivity"></activity>
+        <activity android:name=".activities.IntentExtrasActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
         <activity android:name=".activities.KotlinAndroidExtensionsActivity" />
-        <activity android:name=".activities.LifeCycleEventsActivity" />
+        <activity android:name=".others.LifeCycleEventsActivity" />
         <activity android:name=".activities.ListViewActivity" />
         <activity android:name=".activities.SharedPreferencesActivity" />
         <activity android:name=".activities.PicassoActivity" />
